--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,12 @@ spring:
   cloud:
     stream:
       function:
-        definition : orderSupplier
+        definition : orderSupplier;paymentEventConsumer
       bindings:
         orderSupplier-out-0:
           destination: order-event
+        paymentEventConsumer-in-0 :
+          destination: payment-event
 
 server:
   port: 8081
